--- a/confd/templates/prometheus.yml
+++ b/confd/templates/prometheus.yml
@@ -1,42 +1,46 @@
 global:
-  scrape_interval:     {{getenv "SCRAPE_INTERVAL_SECS" "40"}}s # Set the scrape interval. Default is every 40 secs.
-  evaluation_interval: {{getenv "EVAL_INTERVAL_SECS" "70"}}s # Evaluate rule. The default is every 70 secs.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  evaluation_interval: 15s
 
-# Alertmanager configuration
-alerting:
-  alertmanagers:
-  - static_configs:
-    - targets:
-  # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
-
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'prometheus'
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
+  - job_name: 'Prometheus'
     static_configs:
     - targets: ['localhost:9090']
+    basic_auth:
+      username: admin
+      password: {{getenv "DASHBOARD_PASSWORD"}}
 
-  - job_name: 'cadvisor'
-    ec2_sd_configs:
-    - region: {{getenv "AWS_REGION" "eu-west-1"}}
-      access_key: {{getv "/path/to/your/prometheus/access_key"}}
-      secret_key: {{getv "/path/to/your/prometheus/secret_key"}}
-      port: {{getenv "PORT" "9100"}}
+  - job_name: EC2
     relabel_configs:
-      # Use the instance ID as the instance label
-      - source_labels: [__meta_ec2_instance_id]
+      - source_labels: [__meta_ec2_tag_Name]
         target_label: instance
+      - source_labels: [__meta_ec2_private_ip]
+        target_label: ip
+    ec2_sd_configs:
+      - region: us-east-1
+        role_arn: {{getenv "EC2_ROLE_ARN"}}
+        port: 9100
 
-  - job_name: api
-    bearer_token: {{getv "/prometheus/barer_token"}}
-    scheme: https
-    static_configs:
-    - targets:
-      - {{getenv "API_TARGET_URL"}}
+  - job_name: Application
+    relabel_configs:
+      - source_labels: [__meta_ec2_tag_Name]
+        target_label: instance
+      - source_labels: [__meta_ec2_private_ip]
+        target_label: ip
+    ec2_sd_configs:
+      - region: us-east-1
+        role_arn: {{getenv "EC2_ROLE_ARN"}}
+        port: 80
+    basic_auth:
+      username: prometheus
+      password: {{getenv "METRICS_PASSWORD"}}
+
+  - job_name: ECS
+    file_sd_configs:
+      - files:
+        - /etc/prometheus/ecs_file_sd.yml
+        refresh_interval: 1m
+    scrape_interval: 1m
+    scrape_timeout: 30s
+
