--- a/confd/templates/prometheus.yml
+++ b/confd/templates/prometheus.yml
@@ -4,14 +4,14 @@ global:
   evaluation_interval: 60s
 
 scrape_configs:
-  - job_name: 'Prometheus'
+  - job_name: "prometheus"
     static_configs:
-    - targets: ['localhost:9090']
+      - targets: ["localhost:9090"]
     basic_auth:
       username: admin
       password: {{getenv "DASHBOARD_PASSWORD"}}
 
-  - job_name: EC2
+  - job_name: ec2
     relabel_configs:
       - source_labels: [__meta_ec2_tag_Name]
         target_label: instance
@@ -22,7 +22,7 @@ scrape_configs:
         role_arn: {{getenv "EC2_ROLE_ARN"}}
         port: 9100
 
-  - job_name: Application
+  - job_name: app
     relabel_configs:
       - source_labels: [__meta_ec2_tag_Name]
         target_label: instance
@@ -36,9 +36,8 @@ scrape_configs:
       username: prometheus
       password: {{getenv "METRICS_PASSWORD"}}
 
-  - job_name: ECS
+  - job_name: ecs
     file_sd_configs:
       - files:
-        - /etc/prometheus/ecs_file_sd.yml
+          - /etc/prometheus/ecs_file_sd.yml
         refresh_interval: 1m
-
